--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ace-builds": "^1.4.11",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "brace": "^0.11.1",
+    "he-sdk-nodejs": "^0.1.0",
     "react": "^16.13.1",
+    "react-ace": "^9.1.1",
+    "react-bootstrap": "^1.0.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
